--- a/18-24.Mai/content/auswertung.tex
+++ b/18-24.Mai/content/auswertung.tex
@@ -17,7 +17,7 @@ Für die weitere Versuchsauswertung wird zunächst die mittelere freie Wellenlä
   \caption{mittlere Wellenlänge und Verhältniss zur Beschleunigungsstrecke}
   \label{tab:mitWel}
 \end{table}
-
+Der optimale Temperaturberiech liegt oberhalb von 105 °C und Unterhalb von 180 °C. In diesem Temperaturbereich können die Elektronen genügend oft mit dem Gas wechselwirken, stoßen jedoch nicht all zu oft mit diesen elastisch.
 \subsection{Differentielle Energieverteilung}
 Als erstes wird die Skalierung der x-Achse für die Graphen bei 27 und 140 °C bestimmt. Der Graph welcher bei 27 °C aufgezeichnet wurde, weist eine Distanz von 21 cm auf zwischen dem x-Achsen Punkt von 0 bis 10 Volt auf. Somit ergibt sich für die Länge eines cm Kästchen $K$ eine Spannung von
 \begin{equation}
@@ -87,15 +87,15 @@ Die Beschleunigungsspannung beträgt beträgt 11 V, woraus ein Kontaktpotential 
   \caption{Differentielle Energieverteilung 140 °C}
   \label{fig:Energie140}
 \end{figure}
-Desweiteren weisen die Peaks in beiden Diagrammen eine gewisse Unschärfe auf, was an der Fermi-Dirac-Statistik liegt. Zur Abbildung \ref{fig:Energie140} ist zu sagen das der Graph eine Steigung aufweist. Dies lässt sich durch das Verhältniss $a/w$ erklären, da aufgrund der kleinen mittleren freien Wellenlänge es zu vielen elastischen Stößen kommt. Dabei werden die Elektronenen um eine zufällige Geschwindigkeit abgebremst und die Geschwindigkeit in Richtung Auffängerelektrode kann nicht mehr bestimmt werden. Aufgrund dessen verteilen sich die Energien ebenfalls zufällig. Ab einer Energie von 4.9eV ist ein Einbruch in der Energieverteilung zu erkennen. Dieser lässt sich aufgrund der Anregung der Queksilberatome erklären. Dieses Phänomen tritt ab einer Spannung von 4.76 V auf, worauf in den folgenden Kapitel noch weiter eingegangen wird.
+Desweiteren weisen die Peaks in beiden Diagrammen eine gewisse Unschärfe auf, was an der Fermi-Dirac-Statistik liegt. Zur Abbildung \ref{fig:Energie140} ist zu sagen das der Graph ebenso wie Abbildung \ref{fig:Energie20} eine Steigung aufweist. Dies lässt sich durch das Verhältniss $a/w$ erklären, da aufgrund der kleinen mittleren freien Wellenlänge es zu vielen elastischen Stößen kommt. Dabei werden die Elektronenen um eine zufällige Geschwindigkeit abgebremst und die Geschwindigkeit in Richtung Auffängerelektrode kann nicht mehr bestimmt werden. Aufgrund dessen verteilen sich die Energien ebenfalls zufällig. Ab einer Energie von 4.9eV ist ein Einbruch in der Energieverteilung zu erkennen. Dieser lässt sich aufgrund der Anregung der Queksilberatome erklären. Dieses Phänomen tritt ab einer Spannung von 4.76 V auf, worauf in den folgenden Kapitel noch weiter eingegangen wird.
 
 \subsection{Frank-Hertz Kurve}
 Analog zum vorhergegangenen Auswertungsteil wird zunächst der Kästchenmaßstab bestimmt. Dieser beträgt
 \begin{equation}
-  K_3 = 2.43 V
+  K3_\text{cm} = 2.43 V
   \label{eqn:K3}
 \end{equation}
-beträgt. Die Distanzen zwischen den Maxima und dem Darauffolgenden werden mit dem Kästchenmaßstab $K2$ multipliziert und in Tabelle \ref{tab:Max} aufgetragen.
+beträgt. Die Distanzen zwischen den Maxima und dem Darauffolgenden werden mit dem Kästchenmaßstab $K3_\text{cm}$ multipliziert und in Tabelle \ref{tab:Max} aufgetragen.
 \begin{table}
   \centering
   \begin{tabular}{c c}
@@ -111,13 +111,13 @@ beträgt. Die Distanzen zwischen den Maxima und dem Darauffolgenden werden mit d
     	7 & 4.86	\\
     	8 & 5.34	\\
     \midrule
-    	$\overline{U}$  = & 4.76 \\
+    $\overline{U}$  = & \ref{4.8 +- 0.1} \\
     \bottomrule
   \end{tabular}
   \caption{Abstand zu dem darauffolgendem Maxima}
   \label{tab:Max}
 \end{table}
-Aus dem gemittelten Anregungsenergie ergibt sich nach umstellen der Formel \ref{eqn:} eine Wellenlänge des Lichtes von
+Aus dem gemittelten Anregungsenergie ergibt sich nach umstellen der Formel \ref{eqn:EE} eine Wellenlänge des Lichtes von
 \begin{equation}
   \lambda = \frac{c \cdot h \cdot e_0}{\overline{U}} = 259 \, \text{nm} \ .
   \label{eqn:spek}
