--- a/18-24.Mai/content/diskussion.tex
+++ b/18-24.Mai/content/diskussion.tex
@@ -8,8 +8,8 @@ Beide Kontaktpotentiale weiche voneinander um 30 \% von einander ab. Das gemitte
 \begin{equation}
   U = 4.79 \, \text{eV} \ ,
 \end{equation}
-was einer Abweichung von 2\% vom Literaturwert \cite{Ea} beträgt. Die Ermittelte Ionisierugsenergie ist
+was einer Abweichung von 2\% vom Literaturwert (4.9 eV \cite{Ea}) beträgt. Die Ermittelte Ionisierugsenergie ist
 \begin{equation}
   E_\text{Io} = 9.99 \, \text{eV} \ .
 \end{equation}
-Dies entspricht einer Abweichung von 4 \% vom Literaturwert \cite{EIo} entspricht.
+Dies entspricht einer Abweichung von 4 \% vom Literaturwert (10.438 eV \cite{EIo}) entspricht.
