--- a/20-07.Juni/lit.bib
+++ b/20-07.Juni/lit.bib
@@ -1,15 +1,13 @@
 @manual{sample,
   author = {TU Dortmund},
   title = {Versuch 311, Der Hall-Effekt und Elektrizitätsleitung bei Metallen},
-  year = 2016,
-  month = 06,
+  note = {abgerufen am: 13.06.2016},
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V311.pdf},
 }
 
 @manual{LEIFI,
   author = {LEIFI Physik},
   title = {Elektrizitätslehre},
-  year = 2016,
-  month = 06,
+  note = {abgerufen am: 13.06.2016},
   address = {http://www.leifiphysik.de/sites/default/files/medien/hall01\_beweggeladteilch\_ver.gif},
 }
