--- a/21-14.Juni/content/auswertung.tex
+++ b/21-14.Juni/content/auswertung.tex
@@ -29,3 +29,7 @@
   \caption{Charakteristik des Zählrohres.}
   \label{fig:Plateau}
 \end{figure}
+
+\begin{equation*}
+  y = (\num{0.09 +- 0.02}) \cdot x + (\num{503 +- 11})
+\end{equation*}
