--- a/21-14.Juni/content/auswertung.tex
+++ b/21-14.Juni/content/auswertung.tex
@@ -51,7 +51,7 @@ bestimmt. Für die Steigung in \% pro 100\,V ergibt sich
 
 
 \subsection{Sichtbarmachung von den Nachentladungen}
-Zu Beginn dieses Versuchteils wird die Strahlintensität soweit abgesenkt das nur ein Primärmaximum bei 350\,V auf dem Oszillographen zu sehen ist. Dann wird bei einer Ablenkgeschwindigkeit von 50 $\mu$s/cm der Abstand zwischen Primär- und Nachladeimpuls geschätzt. Dieser beträgt für 350\,V ($\num{220 +- 50}$)\,$\mu$s und für 700\,V ($\num{215 +- 50}$)\,$\mu$s.
+Zu Beginn dieses Versuchteils wird die Strahlintensität soweit abgesenkt das nur ein Primärmaximum für 350\,V auf dem Oszillographen zu sehen ist. Dann wird bei einer Ablenkgeschwindigkeit von 50 $\mu$s/cm der Abstand zwischen Primär- und Nachladeimpuls geschätzt. Dieser beträgt für 350\,V ($\num{220 +- 50}$)\,$\mu$s und für 700\,V ($\num{220 +- 50}$)\,$\mu$s.
 
 
 \subsection{Bestimmung der Totzeit}
@@ -67,9 +67,9 @@ Der Mittelwert daraus beträgt
 \end{align*}
 Die Messwerte für die zweite Messung sind im folgenden aufgelistet:
 \begin{align*}
-  N_1 = (\num{425 +- 7}) \\
-  N_2 = (\num{336 +- 6}) \\
-  N_{1+2} = (\num{704 +- 8}) \\
+  N_1 = (\num{4250.00 +- 0.02})\,\frac{1}{\text{s}} \\
+  N_2 = (\num{3363.00 +- 0.02})\,\frac{1}{\text{s}} \\
+  N_{1+2} = (\num{7035.00 +- 0.01})\,\frac{1}{\text{s}} \\
 \end{align*}
 Daraus lässt sich mit
 \begin{align*}
@@ -77,7 +77,7 @@ Daraus lässt sich mit
 \end{align*}
 eine Totzeit von
 \begin{align*}
-  T = (\num{0.20 +- 0.04})\,\text{ms}
+  T = (\num{20.2200 +- 0.0008})\,\text{ms}
 \end{align*}
 berechnen.
 
