V703 Auswertung und Diskussion fertig

--- a/21-14.Juni/content/auswertung.tex
+++ b/21-14.Juni/content/auswertung.tex
@@ -2,7 +2,7 @@
 \label{sec:Auswertung}
 
 \subsection{Aufnahme der Zählrohr-Charakteristik}
-In Tabelle \eqref{tab:Char} ist die Zähltrate $N$ in Abhängigkeit von der Spannung $U$ aufgezeigt. Im folgenden wird allerdings nur mit den nicht ausgegrauten Werten gerechnet, da nur diese zu dem Plateau der Charakteristik gehören. Das Plateau liegt wie in Abbildung \eqref{fig:Char1} zu sehen ist, zwischen 350\,V und 650\,V. Mit Hilfe einer Ausgleichsrechnung wird die Funktion des Plateaus zu
+In Tabelle \eqref{tab:Char} ist die Zählrate $N$ in Abhängigkeit von der Spannung $U$ aufgezeigt. Im folgenden wird allerdings nur mit den nicht ausgegrauten Werten gerechnet, da nur diese zu dem Plateau der Charakteristik gehören. Das Plateau liegt wie in Abbildung \eqref{fig:Char1} zu sehen ist, zwischen 350\,V und 650\,V. Mit Hilfe einer Ausgleichsrechnung wird die Funktion des Plateaus zu
 \begin{equation*}
   y = (\num{0.09 +- 0.02}) \cdot x + (\num{500 +- 10})
 \end{equation*}
@@ -13,29 +13,29 @@ bestimmt. Für die Steigung in \% pro 100\,V ergibt sich
 
 \begin{table}[H]
   \centering
-  \begin{tabular}{c|c|c|c}
+  \begin{tabular}{c|c|c}
     \hline
-    $U$ / V & n / 10\,s & N / $\frac{1}{\text{s}}$ & $\frac{\sqrt{n}}{n}$ \\
+    $U$ / V & N in 10\,s & N / $\frac{1}{\text{s}}$ \\
     \hline
-    \rowcolor{lightgray} 310 & 4634 & & \\
-    \rowcolor{lightgray} 315 & 5059 & & \\
-    \rowcolor{lightgray} 325 & 5223 & & \\
-    \hline
-    \hline
-    350 & 5437 & $\num{544 +- 7}$ & 0.01 \\
-    375 & 5384 & $\num{538 +- 7}$ & 0.01 \\
-    400 & 5368 & $\num{537 +- 7}$ & 0.01 \\
-    450 & 5405 & $\num{541 +- 7}$ & 0.01 \\
-    500 & 5447 & $\num{545 +- 7}$ & 0.01 \\
-    550 & 5552 & $\num{555 +- 7}$ & 0.01 \\
-    600 & 5485 & $\num{549 +- 7}$ & 0.01 \\
-    625 & 5598 & $\num{560 +- 7}$ & 0.01 \\
-    650 & 5745 & $\num{575 +- 8}$ & 0.01 \\
+    \rowcolor{lightgray} 310 & 4634 & \\
+    \rowcolor{lightgray} 315 & 5059 & \\
+    \rowcolor{lightgray} 325 & 5223 & \\
     \hline
     \hline
-    \rowcolor{lightgray} 675 & 6028 & & \\
-    \rowcolor{lightgray} 700 & 6264 & & \\
-    \rowcolor{lightgray} 705 & 6443 & & \\
+    350 & 5437 & $\num{544 +- 7}$ \\
+    375 & 5384 & $\num{538 +- 7}$ \\
+    400 & 5368 & $\num{537 +- 7}$ \\
+    450 & 5405 & $\num{541 +- 7}$ \\
+    500 & 5447 & $\num{545 +- 7}$ \\
+    550 & 5552 & $\num{555 +- 7}$ \\
+    600 & 5485 & $\num{549 +- 7}$ \\
+    625 & 5598 & $\num{560 +- 7}$ \\
+    650 & 5745 & $\num{575 +- 8}$ \\
+    \hline
+    \hline
+    \rowcolor{lightgray} 675 & 6028 & \\
+    \rowcolor{lightgray} 700 & 6264 & \\
+    \rowcolor{lightgray} 705 & 6443 & \\
     \hline
   \end{tabular}
   \caption{Messwerte für die Charakteristik des Zählrohrs.}
@@ -50,13 +50,13 @@ bestimmt. Für die Steigung in \% pro 100\,V ergibt sich
 \end{figure}
 
 
-\subsection{Sichtbarmachung von den Nachentladungen}
+\subsection{Bestimmung des Abstandes von Primär- und Nachladeimpuls}
 Zu Beginn dieses Versuchteils wird die Strahlintensität soweit abgesenkt das nur ein Primärmaximum für 350\,V auf dem Oszillographen zu sehen ist. Dann wird bei einer Ablenkgeschwindigkeit von 50 $\mu$s/cm der Abstand zwischen Primär- und Nachladeimpuls geschätzt. Dieser beträgt für 350\,V ($\num{220 +- 50}$)\,$\mu$s und für 700\,V ($\num{220 +- 50}$)\,$\mu$s.
 
 
 \subsection{Bestimmung der Totzeit}
 Die Totzeit wird auf zwei Arten gemessen. \\
-Bei der ersten Methode wird die Totzeit gemäß der Abbildung \eqref{fig:} für 350\,V und 700\,V abgelesen.
+Bei der ersten Methode wird die Totzeit gemäß der Abbildung \eqref{fig:tot} für 350\,V und 700\,V abgelesen.
 \begin{align*}
   T_\text{350\,V} = (\num{50 +- 2})\,\mu\text{s} \\
   T_\text{700\,V} = (\num{70 +- 2})\,\mu\text{s} \\
@@ -71,13 +71,9 @@ Die Messwerte für die zweite Messung sind im folgenden aufgelistet:
   N_2 = (\num{3363 +- 6})\,\frac{1}{\text{s}} \\
   N_{1+2} = (\num{7035 +- 8})\,\frac{1}{\text{s}} \\
 \end{align*}
-Daraus lässt sich mit
+Mit Hilfe der Gleichung \eqref{eqn:T} lässt sich aus den Messwerten eine Totzeit von
 \begin{align*}
-  T = \frac{N_1 + N_2 - N_{1+2}}{2\,N_1\,N_2} \ ,
-\end{align*}
-eine Totzeit von
-\begin{align*}
-  T_\text{2-Quellen} = (\num{20.2 +- 0.4})\,\mu\text{s}
+  T_\text{2-Q-M} = (\num{20.2 +- 0.4})\,\mu\text{s}
 \end{align*}
 berechnen.
 
@@ -87,7 +83,7 @@ Mit Hilfe der Gleichung
 \begin{align*}
   \overline{I} = \frac{\Delta Q\,Z}{\Delta t}
 \end{align*}
-und den Messwerten aus Tabelle \eqref{tab:Ladungsmenge} kann die pro Teilchen freigesetzte Ladungsmenge berechnet werden. Dabei bedeutet $\overline{I}$ den mittleren Strom, $\Delta Q$ die freigesetzte Ladungsmenge, $Z$ die Anzahl der Impulse und $\Delta t$ den Zeitraum.
+und den Messwerten aus Tabelle \eqref{tab:Ladungsmenge} kann die pro Teilchen freigesetzte Ladungsmenge berechnet werden. Dabei bedeutet $\overline{I}$ den mittleren Strom, $\Delta Q$ die freigesetzte Ladungsmenge, $Z$ die Anzahl der Impulse und $\Delta t$ den Zeitraum. In Abbildung \eqref{fig:Ladungsmenge1} wird eine lineare Abhängigkeit zwischen der Spannung und der Ladungsmenge deutlich.
 
 \begin{table}[H]
   \centering
@@ -115,11 +111,15 @@ und den Messwerten aus Tabelle \eqref{tab:Ladungsmenge} kann die pro Teilchen fr
   \label{tab:Ladungsmenge}
 \end{table}
 
-In Abbildung \eqref{fig:Ladungsmenge1} wird eine lineare Abhängigkeit zwischen der Spannung und der Ladungsmenge deutlich.
-
 \begin{figure}[H]
   \centering
-  \includegraphics[height=10cm]{build/Ladungsmenge.pdf}
+  \includegraphics[height=9cm]{build/Ladungsmenge.pdf}
   \caption{Spannung gegen die Ladungsmenge aufgetragen.}
   \label{fig:Ladungsmenge1}
 \end{figure}
+
+Mit Hilfe einer linearen Ausgleichsrechnung wird der Zusammenhang zwischen der Ladungsmenge und der Spannung zu
+\begin{align*}
+  y = (\num{1.94 +- 0.04}) \cdot 10^{-11} \cdot x + (\num{-5.6 +- 0.2}) \cdot 10^{-9}
+\end{align*}
+bestimmt.
