--- a/21-14.Juni/content/durchfuehrung.tex
+++ b/21-14.Juni/content/durchfuehrung.tex
@@ -4,11 +4,11 @@ Die Verschaltung des Versuches ist in Abbildung \ref{fig:Aufbau} zu sehen. Die d
 \begin{figure}
   \centering
   \includegraphics[height=4cm]{picture/Aufbau.pdf}
-  \caption{Modell des Versuchsaufbau}
+  \caption{Modell des Versuchsaufbau \cite{sample}}
   \label{fig:Aufbau}
 \end{figure}
 \subsection{Messprogramm}
 Zunächst wird vor das Zählrohr im geeigneten Abstand ein Thallium 204 Präperat gestellt. Anschließend wird der Strom, als auch die Impulsrate in Abhängigkeit der Betriebsspannung gemessen. Es werden 20 Messwerte genommen die an den Randstellen des Plateaus dichter gewählt werden. 
-Aus dem Oszilloskopbild wird die Todzeit sowie die die Nachentladung gemessen. Dabei muss eine geeignete Intensität durch positionierung des Präperats gewährleistet werden. Für die Nachentladung wird sowohl einmal für eine Betriebsspannung von 350 V als auch von 710 V der Abstand zwischen Primär und Nachentladungsimpuls auf dem Oszilloskop vermessen. 
+Aus dem Oszilloskopbild wird die Todzeit sowie die die Nachentladung gemessen. Dabei muss eine geeignete Intensität durch Positionierung des Präperats gewährleistet werden. Für die Nachentladung wird sowohl einmal für eine Betriebsspannung von 350 V als auch von 710 V der Abstand zwischen Primär und Nachentladungsimpuls auf dem Oszilloskop vermessen. 
 
 Zuletzt wird die Totzeit anhand der Zwei-Quellen-Methode bestimmt. Dabei wird zuerst die Zählrate des erstens Präperats bestimmt und anschließend ein weiteres Präperat auf das Geigermüllerzählrohr gerichtet und die Impulsrate bestimmt. Das erste Präperat wird nun aus dem Strahlengang genommen und die Impulsrate des zweiten Präperats bestimmt. 
