--- a/21-14.Juni/content/durchfuehrung.tex
+++ b/21-14.Juni/content/durchfuehrung.tex
@@ -8,7 +8,7 @@ Die Verschaltung des Versuches ist in Abbildung \ref{fig:Aufbau} zu sehen. Die d
   \label{fig:Aufbau}
 \end{figure}
 \subsection{Messprogramm}
-Zunächst wird vor das Zählrohr im geeigneten Abstand ein Thallium 204 Präperat gestellt. Anschließend wird der Strom, als auch die Impulsrate in Abhängigkeit der Betriebsspannung gemessen. Es werden 20 Messwerte genommen die an den Randstellen des Plateaus dichter gewählt werden. 
-Aus dem Oszilloskopbild wird die Todzeit sowie die die Nachentladung gemessen. Dabei muss eine geeignete Intensität durch Positionierung des Präperats gewährleistet werden. Für die Nachentladung wird sowohl einmal für eine Betriebsspannung von 350 V als auch von 710 V der Abstand zwischen Primär und Nachentladungsimpuls auf dem Oszilloskop vermessen. 
+Zunächst wird vor das Zählrohr im geeigneten Abstand ein Thallium 204 Präperat gestellt. Anschließend wird sowohl der Strom, als auch die Impulsrate in Abhängigkeit der Betriebsspannung gemessen. Es werden 20 Messwerte genommen die an den Randstellen des Plateaus dichter gewählt werden.
+Aus dem Oszilloskopbild wird die Totzeit sowie die Nachentladung gemessen. Dabei muss eine geeignete Intensität durch Positionierung des Präperats gewährleistet werden. Für die Nachentladung wird sowohl einmal für eine Betriebsspannung von 350\,V als auch von 700\,V der Abstand zwischen Primär- und Nachentladungsimpuls auf dem Oszilloskop vermessen.
 
-Zuletzt wird die Totzeit anhand der Zwei-Quellen-Methode bestimmt. Dabei wird zuerst die Zählrate des erstens Präperats bestimmt und anschließend ein weiteres Präperat auf das Geigermüllerzählrohr gerichtet und die Impulsrate bestimmt. Das erste Präperat wird nun aus dem Strahlengang genommen und die Impulsrate des zweiten Präperats bestimmt. 
+Zuletzt wird die Totzeit anhand der Zwei-Quellen-Methode bestimmt. Dabei wird zuerst die Zählrate des ersten Präperats bestimmt und anschließend ein weiteres Präperat auf das Geiger-Müller-Zählrohr gerichtet und die Impulsrate bestimmt. Das erste Präperat wird nun aus dem Strahlengang genommen und die Impulsrate des zweiten Präperats bestimmt.
