--- a/18-24.Mai/content/auswertung.tex
+++ b/18-24.Mai/content/auswertung.tex
@@ -17,7 +17,7 @@ Für die weitere Versuchsauswertung wird zunächst die mittelere freie Wellenlä
   \caption{mittlere Wellenlänge und Verhältniss zur Beschleunigungsstrecke}
   \label{tab:mitWel}
 \end{table}
-Der optimale Temperaturberiech liegt oberhalb von 105 °C und Unterhalb von 180 °C. In diesem Temperaturbereich können die Elektronen genügend oft mit dem Gas wechselwirken, stoßen jedoch nicht all zu oft mit diesen elastisch.
+Der optimale Temperaturbereich liegt oberhalb von 105 °C und Unterhalb von 180 °C. In diesem Temperaturbereich können die Elektronen genügend oft mit dem Gas wechselwirken, stoßen jedoch nicht all zu oft mit diesen elastisch.
 \subsection{Differentielle Energieverteilung}
 Als erstes wird die Skalierung der x-Achse für die Graphen bei 27 und 140 °C bestimmt. Der Graph welcher bei 27 °C aufgezeichnet wurde, weist eine Distanz von 21 cm auf zwischen dem x-Achsen Punkt von 0 bis 10 Volt auf. Somit ergibt sich für die Länge eines cm Kästchen $K$ eine Spannung von
 \begin{equation}
@@ -111,7 +111,7 @@ beträgt. Die Distanzen zwischen den Maxima und dem Darauffolgenden werden mit d
     	7 & 4.86	\\
     	8 & 5.34	\\
     \midrule
-    $\overline{U}$  = & \ref{4.8 +- 0.1} \\
+    $\overline{U}$  = & \num{4.8 +- 0.1} \\
     \bottomrule
   \end{tabular}
   \caption{Abstand zu dem darauffolgendem Maxima}
