--- a/18-24.Mai/content/theorie.tex
+++ b/18-24.Mai/content/theorie.tex
@@ -67,7 +67,7 @@ Der Summand $K$ entspricht dabei dem Kontaktpotential und hat den Wert
 	\label{eqn:K}
 \end{equation*}
 wobei $\Phi_\text{B}$ der Austrittsarbeit der Beschleunigerelektrode und $\Phi_\text{G}$ der Austrittsarbeit des Glühdrahtes entspricht. Dadurch ist die Kurve um den Wert $K$ verschoben. \\
-Die bisherige Annahme das alle Elektronen mit der selben Energie aus dem Glühdraht austreten stimmt nicht. Stattdessen besitzen die Elektronen ein \textbf{Energie-Spektrum} mit welchem sie aus dem Glühdraht austreten. Dadurch gibt es nicht nur eine Beschleunigungsspannung bei der die Elektronen die richtige Energie haben sondern einen Bereich indem das zutrifft. Aus diesem Grund gibt es nach dem Maximum keinen instantanen Abfall sondern eine stetig abfallende Kurve. \\
+Die bisherige Annahme das alle Elektronen mit der selben Energie aus dem Glühdraht austreten stimmt nicht. Stattdessen treten die Elektronen entsprechend der Fermi-Dirac-Verteilung aus dem Glühdraht aus. Dadurch gibt es nicht nur eine Beschleunigungsspannung bei der die Elektronen die richtige Energie haben sondern einen Bereich indem das zutrifft. Aus diesem Grund gibt es nach dem Maximum keinen instantanen Abfall sondern eine stetig abfallende Kurve. \\
 \textbf{Der Dampfdruck} beeinflusst die Häufigkeit der Zusammenstöße zwischen den Elektronen und den Hg-Atomen. Der Dampfdruck darf nicht zu niedrieg sein, da sonst kaum Elektronen mit dem Gas wechselwirken würden und ungebremst zur Auffängerelektrode fliegen könnten. Allerdings darf der Dampfdruck auch nicht zu hoch sein, da die Elektronen sonst zu oft mit dem Gas wechselwirken würden und garnicht mehr zur Auffängerelektrode gelangen würden. "Die mittlere freie Weglänge $\overline{w}$ der Atome muss klein gegen den Abstand $a$ zwischen Kathode und Beschleunigerelektrode sein" \cite[6]{sample}. Aus der Gastheorie folgt
 \begin{equation*}
 	\overline{w} = \frac{0.0029}{p_\text{Sät}} \ . \\
